--- a/.github/workflows/secret.yml
+++ b/.github/workflows/secret.yml
@@ -9,7 +9,7 @@ jobs:
      - name: Checkout code
        uses: actions/checkout@v2
      - name: upload artifact
-       uses: actions/upload-artifact@latest
+       uses: actions/upload-artifact@v2
        with:
          name: ${{env.ARTIFACT_NAME}}
          path: .
