--- a/.github/workflows/secret.yml
+++ b/.github/workflows/secret.yml
@@ -2,6 +2,7 @@ name: secret
 on: push
 env:
   ARTIFACT_NAME: myArtifact
+  ARTIFACT_DOWNLOAD_NAME: myArtifactDownloaded
 jobs:
   main:
    runs-on: ubuntu-latest
@@ -13,6 +14,14 @@ jobs:
        with:
          name: ${{env.ARTIFACT_NAME}}
          path: .
+  child:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{env.ARTIFACT_NAME}}
+          path: ./downloaded
      
      
      
