--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -16,6 +16,7 @@ jobs:
          path: .
   child:
     runs-on: ubuntu-latest
+    needs: main
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
